Removed old project files.

--- a/nusd/nusd.csproj
+++ b/nusd/nusd.csproj
@@ -50,6 +50,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Sample.Batch.File.bat">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\NUSDownloader\NUSDownloaderCli.csproj">
