Added additional arguments for "wii" or "dsi" and argument for customNusURL.

--- a/nusd/nusd.csproj
+++ b/nusd/nusd.csproj
@@ -58,10 +58,16 @@
     <ManifestKeyFile>nusd_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
-    <GenerateManifests>true</GenerateManifests>
+    <GenerateManifests>false</GenerateManifests>
   </PropertyGroup>
   <PropertyGroup>
     <SignManifests>false</SignManifests>
+  </PropertyGroup>
+  <PropertyGroup>
+    <TargetZone>LocalIntranet</TargetZone>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -81,7 +87,14 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="nusd_TemporaryKey.pfx" />
+    <None Include="Properties\app.manifest" />
+    <None Include="Sample.Batch.Bogus.bat">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="Sample.Batch.File.bat">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Sample.Batch.File2.bat">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
@@ -106,6 +119,6 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>copy /Y "$(TargetDir)$(TargetName).exe" "$(SolutionDir)compiled.outputs\$(TargetName).exe"
-copy /Y "Sample.Batch.File.bat" "$(SolutionDir)compiled.outputs\Sample.Batch.File.bat"</PostBuildEvent>
+copy /Y "$(ProjectDir)*.bat" "$(SolutionDir)compiled.outputs\"</PostBuildEvent>
   </PropertyGroup>
 </Project>
