Added unit tests, but no tests yet.

--- a/.gitignore
+++ b/.gitignore
@@ -396,3 +396,9 @@ FodyWeavers.xsd
 
 compiled.outputs/scripts/
 compiled.outputs/titles/
+
+scripts/
+titles/
+
+#nusd/Properties/
+#NUSDownloader/Properties/
