--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\NUSDownloader\NUSDownloaderCli.csproj" />
+    <ProjectReference Include="..\nusd\nusd.csproj" />
   </ItemGroup>
 
   <ItemGroup>
