--- a/NUSDownloader/NUSDownloaderCli.csproj
+++ b/NUSDownloader/NUSDownloaderCli.csproj
@@ -146,6 +146,12 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Windows7Taskbar.cs" />
+    <None Include="Sample.CLI.bat">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Sample.CLI.Bogus.bat">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="TODO" />
   </ItemGroup>
   <ItemGroup>
@@ -261,8 +267,10 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>copy /Y "$(TargetDir)$(TargetName).exe" "$(SolutionDir)compiled.outputs\$(TargetName).exe"
+copy /Y "$(TargetDir)Sample.CLI.bat" "$(SolutionDir)compiled.outputs\"
+copy /Y "$(TargetDir)Sample.CLI.Bogus.bat" "$(SolutionDir)compiled.outputs\"
 copy /Y "$(SolutionDir)Readme.txt" "$(SolutionDir)compiled.outputs\Readme.txt"
-copy "$(TargetPath)" "$(ProjectDir)\Latest\"</PostBuildEvent>
+</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
