--- a/NUSDownloaderNet6/Properties/launchSettings.json
+++ b/NUSDownloaderNet6/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "NUSDownloaderCLI": {
-      "commandName": "Project",
-      "commandLineArgs": "help"
+      "commandName": "Project"
     }
   }
 }
