--- a/NUSDownloader/NUSDownloader3.5.csproj
+++ b/NUSDownloader/NUSDownloader3.5.csproj
@@ -146,10 +146,10 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Windows7Taskbar.cs" />
-    <None Include="Sample.CLI.bat">
+    <None Include="Sample-net35-Bogus.bat">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="Sample.CLI.Bogus.bat">
+    <None Include="Sample-net35.bat">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="TODO" />
@@ -266,9 +266,9 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>copy /Y "$(TargetDir)$(TargetName).exe" "$(SolutionDir)compiled.outputs\$(TargetName).exe"
-copy /Y "$(TargetDir)Sample.CLI.bat" "$(SolutionDir)compiled.outputs\"
-copy /Y "$(TargetDir)Sample.CLI.Bogus.bat" "$(SolutionDir)compiled.outputs\"
+    <PostBuildEvent>copy /Y "$(TargetDir)$(TargetName).exe" "$(SolutionDir)compiled.outputs\net3.5\$(TargetName).exe"
+copy /Y "$(TargetDir)Sample-net35.bat" "$(SolutionDir)compiled.outputs\net3.5\"
+copy /Y "$(TargetDir)Sample-net35-Bogus.bat" "$(SolutionDir)compiled.outputs\net3.5\"
 </PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
