Moved Database into folder.

--- a/NUSDownloaderNet6/NUSDownloaderNet6.csproj
+++ b/NUSDownloaderNet6/NUSDownloaderNet6.csproj
@@ -27,10 +27,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="database.xml">
+    <None Update="Database\database.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="dsidatabase.xml">
+    <None Update="Database\dsidatabase.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="proxy.json">
